@@ -94,6 +94,8 @@ By DamienMcKenna: Properly formatted all comments in the main module file.
   throwing a 404 page.
 By DamienMcKenna: Minor refactoring to node revision tests.
 #2748373 by DamienMcKenna: Tests to confirm defaults can be cloned.
+#2577031 by DamienMcKenna, denisz: Tests to confirm what happens when a default
+  display is overridden per node, leaving UUID fixes to Panels to handle.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
